--- a/html/0.styles.css
+++ b/html/0.styles.css
@@ -27,10 +27,6 @@ header nav ul {
     padding: 0;
 }
 
-header nav ul li {
-    display: inline;
-}
-
 header nav ul li a {
     color: white;
     text-decoration: none;
@@ -58,61 +54,48 @@ main h1 {
 /* Productos */
 .productos {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Adaptable según el tamaño */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Adaptable */
     gap: 20px;
-    margin-top: 20px;
 }
 
 .producto {
     background: white;
     border: 1px solid #ddd;
     border-radius: 10px;
-    overflow: hidden;
     text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
 }
 
 .producto:hover {
-    transform: scale(1.05); /* Efecto al pasar el cursor */
+    transform: scale(1.05);
 }
 
 .producto img {
     width: 100%;
-    height: 250px; /* Tamaño uniforme */
-    object-fit: contain; /* Mantener proporciones sin recortar */
+    height: 250px;
+    object-fit: contain;
     margin-bottom: 10px;
 }
 
 .producto h3 {
     font-size: 1.2em;
-    color: #17408b; /* Azul NBA */
-    margin-bottom: 10px;
-}
-
-.producto p {
-    font-size: 0.9em;
-    color: #666;
-    margin: 5px 0;
+    color: #17408b;
 }
 
 .producto button {
-    background-color: #17408b; /* Azul NBA */
+    background-color: #17408b;
     color: white;
     border: none;
     padding: 10px 15px;
-    cursor: pointer;
     border-radius: 5px;
     font-size: 1em;
     transition: background-color 0.3s;
 }
 
 .producto button:hover {
-    background-color: #ff0000; /* Rojo NBA */
+    background-color: #ff0000;
 }
 
 /* Carrito */
@@ -136,26 +119,17 @@ main h1 {
     border: 1px solid #ddd;
     text-align: center;
     padding: 15px;
-    font-size: 1em;
 }
 
 .carrito-tabla th {
-    background-color: #17408b; /* Azul NBA */
+    background-color: #17408b;
     color: white;
-    font-size: 1.1em;
-}
-
-.carrito-tabla img {
-    max-width: 100px;
-    height: auto;
-    border-radius: 5px;
 }
 
 .carrito-total {
     text-align: right;
     font-size: 1.3em;
     color: #333;
-    margin-top: 20px;
 }
 
 /* Botones */
@@ -166,13 +140,18 @@ button {
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1.1em;
-    transition: all 0.3s;
+    transition: transform 0.3s, background-color 0.3s;
 }
 
 button:hover {
     background-color: #ff0000;
-    transform: scale(1.1); /* Efecto de zoom al pasar el cursor */
+    transform: scale(1.1);
+}
+
+.carrito-talla select {
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
 }
 
 /* Footer */
@@ -181,10 +160,4 @@ footer {
     color: white;
     text-align: center;
     padding: 1em;
-    margin-top: 20px;
-    font-size: 0.9em;
-}
-
-footer p {
-    margin: 0;
 }
